--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "id": "imports",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "id": "load_data",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "id": "define_models",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "id": "train_models",
    "metadata": {},
    "outputs": [
@@ -179,9 +179,9 @@
       "Model Performance Summary\n",
       "================================================================================\n",
       "              Model  Accuracy  Precision   Recall       F1  ROC-AUC  CV Mean   CV Std     Time\n",
-      "      Random Forest  0.595771   0.540323 0.499069 0.518877 0.638515 0.513248 0.011249 0.155005\n",
-      "  Gradient Boosting  0.594551   0.541712 0.465549 0.500751 0.632150 0.491514 0.007017 1.068334\n",
-      "Logistic Regression  0.567304   0.504780 0.491620 0.498113 0.613247 0.513073 0.012338 0.005962\n"
+      "      Random Forest  0.595771   0.540323 0.499069 0.518877 0.638515 0.513248 0.011249 0.184770\n",
+      "  Gradient Boosting  0.594551   0.541712 0.465549 0.500751 0.632150 0.491514 0.007017 1.054984\n",
+      "Logistic Regression  0.567304   0.504780 0.491620 0.498113 0.613247 0.513073 0.012338 0.048154\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "id": "viz_comparison",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "id": "best_model",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "id": "confusion_matrix",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "id": "roc_curve",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "861c0409",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✓ Learning curves analysis complete\n"
+      "Learning curves analysis complete\n"
      ]
     }
    ],
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "feature_importance",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
       "ppkid017            0.079176\n",
       "dtype: float64\n",
       "\n",
-      "✓ Feature importance comparison complete\n"
+      " Feature importance comparison complete\n"
      ]
     }
    ],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "8add1bc5",
    "metadata": {},
    "outputs": [
@@ -598,10 +598,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "================================================================================\n",
-      "ERROR ANALYSIS\n",
-      "================================================================================\n",
       "\n",
       "Total test samples: 2459\n",
       "Correctly classified: 1465 (59.6%)\n",
@@ -658,7 +654,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✓ Error analysis complete\n"
+      "Error analysis complete\n"
      ]
     }
    ],
@@ -723,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "63d014ce",
    "metadata": {},
    "outputs": [
@@ -731,10 +727,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "================================================================================\n",
-      "CROSS-VALIDATION ANALYSIS\n",
-      "================================================================================\n",
       "\n",
       "Logistic Regression:\n",
       "  Accuracy:  0.583 ± 0.011\n",
@@ -780,7 +772,7 @@
       "\n",
       "Most stable model (F1): Gradient Boosting\n",
       "\n",
-      "✓ Cross-validation analysis complete\n"
+      "Cross-validation analysis complete\n"
      ]
     }
    ],
@@ -858,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "save_models",
    "metadata": {},
    "outputs": [
@@ -898,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "summary",
    "metadata": {},
    "outputs": [
@@ -921,7 +913,7 @@
       "\n",
       "Cross-validation F1: 0.5132 (±0.0112)\n",
       "\n",
-      "Training time: 0.16 seconds\n",
+      "Training time: 0.18 seconds\n",
       "\n",
       "================================================================================\n",
       "Ready to proceed to analysis notebook for SHAP and hyperparameter tuning\n",
